--- a/luck-of-die-frontend/index.html
+++ b/luck-of-die-frontend/index.html
@@ -10,6 +10,14 @@
     <body>
         <div id="main">
             <h1>Welcome to Luck of Die</h1>
+            <h2>CurrentUsers:</h2>
+            <ul id="all_users">
+            </ul>
+            <br>
+            <form id="create_or_find_user_form">
+                <input type="text" name="name" placeholder="Enter Username">
+                <input type="submit" name="submit" value="Enter">
+            </form>
         </div>
 
 
