--- a/luck-of-die-frontend/index.html
+++ b/luck-of-die-frontend/index.html
@@ -15,5 +15,10 @@
 
 
     </body>
-    <script src="index.js" charset="utf-8"></script>
+    <script src="src/fetchData.js" charset="utf-8"></script>
+    <script src="src/userManipulation.js" charset="utf-8"></script>
+    <script src="src/boardManipulation.js" charset="utf-8"></script>
+    <script src="src/cupManipulation.js" charset="utf-8"></script>
+
+    <script src="src/index.js" charset="utf-8"></script>
 </html>
