stretch goals done

--- a/luck-of-die-frontend/index.html
+++ b/luck-of-die-frontend/index.html
@@ -2,13 +2,23 @@
 
 <html lang="en">
     <head>
-
+        <link rel="stylesheet" type="text/css" href="index.css">
 
 
         <title>Luck of Die</title>
     </head>
     <body>
-        <div id="main">
+        <div id=logo>
+            <img src="img/lod_logo.png" width="280" height="160">
+        </div>
+        <div id="field">
+            <div id="main">
+            </div>
+        </div>
+        <div id="leaderboard">
+            <h2>Leaderboard</h2>
+            <ul id="leader_id">
+            </ul>
         </div>
 
 
