--- a/luck-of-die-frontend/index.html
+++ b/luck-of-die-frontend/index.html
@@ -8,6 +8,16 @@
         <title>Luck of Die</title>
     </head>
     <body>
+        <audio id="diceAudio">
+            <source src="audio/dice_roll.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="winAudio">
+            <source src="audio/win_sound.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="loseAudio">
+            <source src="audio/lose_sound.mp3" type="audio/mpeg">
+        </audio>
+        
         <div id=logo>
             <img src="img/lod_logo.png" width="280" height="160">
         </div>
